# microbial-trait-mappings

./: .gitignore  CLAUDE.md  Makefile  README.md  SECURITY.md  justfile  pyproject.toml
.github/workflows/: codeql.yml  validate.yml
conf/: oak_config.yaml
data/: README.md
data/chemicals/: chemical_mappings.tsv  chemical_negative_mappings.tsv
data/enzymes/: enzyme_mappings.tsv  enzyme_negative_mappings.tsv
data/pathways/: pathway_mappings.tsv  pathway_negative_mappings.tsv
data/phenotypes/: phenotype_negative_mappings.tsv
docs/: curie_namespace_policy.md  motivation.md  negative_mappings.md  text_normalization_policy.md
docs/case_studies/: casamino_acids.md
microbial_trait_mappings/: __init__.py  cli.py  normalize.py  sri_normalize.py  validate_mappings.py  verify.py
tests/: test_conversion_patterns.py  test_data_integrity.py  test_normalize.py  test_round_trip.py  test_validate_mappings.py  test_verify.py
